# Analytical-Finance-and-Machine-Learning

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 01_professor_requirements.md  02_signal_exploration_plan.md  03_research_question_design.md  04_data_dictionary_template.md  05_methodology_notes.md
notebooks/: 00_data_pull_existing_notebook_placeholder.md  00_transcript_and_revenue_data_pull.ipynb  01_data_audit_and_validation.ipynb  02_initial_eda.ipynb  03_buyback_sentiment_clarity.ipynb  03_keyword_and_theme_exploration.ipynb  03_sentiment_baseline.ipynb  04_buyback_announcement_classification_ollama.ipynb  04_clarity_signal_prototyping.ipynb  04_topic_modeling.ipynb  05_event_study_baseline.ipynb  05_sentiment_baseline.ipynb  05_sentiment_clarity_eda_outputs.ipynb  06_buyback_sentiment_clarity.ipynb  06_classification_eda_outputs.ipynb  06_style_signal_prototyping.ipynb  07_event_study_baseline.ipynb  07_sentiment_clarity_eda_outputs.ipynb  07_sentiment_clarity_scoring.ipynb  08_control_variable_analysis.ipynb  08_panel_tests_baseline.ipynb  90_keyword_and_theme_exploration.ipynb  91_topic_modeling.ipynb  98_panel_tests_legacy.ipynb  README.md
scripts/: build_heuristic_transcript_components.py  compare_buyback_samples.py  pull_wrds_transcript_components.py  run_buyback_sample.py
src/: __init__.py
tests/: test_buyback_events.py  test_clarity.py  test_data_validation.py  test_event_study.py  test_heuristic_components.py  test_qa_split.py  test_style_scoring.py  test_text_analysis.py  test_wrds_transcript_components.py
(+43 files in other folders)
