[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytical-finance-ml-research"
version = "0.1.0"
description = "Research scaffold for earnings call transcript analysis, communication-style signals, and baseline finance tests."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Project Team" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
