[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytical-finance-ml-research"
version = "0.1.0"
description = "Buyback announcements, earnings-call sentiment and clarity, and abnormal-return event studies on transcript text."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Project Team" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
